src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ATL_BTL__c</fullName>
        <description>ATL/BTL of the campaign</description>
        <label>ATL/BTL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Region_Expense__c</fullName>
        <description>Retail Campaign: Actual Region Expense of the campaign.</description>
        <label>Actual Region Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_Campaign_Member_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to copied on Campaign member for Opro Campaigns</description>
        <label>Add Campaign Member ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Sales_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to copied on Campaign member for Opro Campaigns</description>
        <label>Add Sales Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Service_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to copied on Campaign member for Opro Campaigns</description>
        <label>Add Service Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Due_Date__c</fullName>
        <label>Approval Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BP_End_Date__c</fullName>
        <label>BP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BP_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Start_Date__c</fullName>
        <label>BP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BP_Status__c</fullName>
        <label>BP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Interval_Days__c</fullName>
        <description>Used only for Campaign Execution (together with Batch Size field)</description>
        <label>Batch Interval (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>Used only for Campaign Execution.</description>
        <label>Batch Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 door</fullName>
                </value>
                <value>
                    <fullName>Cabriolet</fullName>
                </value>
                <value>
                    <fullName>Coupe</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Hatch</fullName>
                </value>
                <value>
                    <fullName>LWB</fullName>
                </value>
                <value>
                    <fullName>People Mover</fullName>
                </value>
                <value>
                    <fullName>Roadster</fullName>
                </value>
                <value>
                    <fullName>Saloon</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Shooting Brake</fullName>
                </value>
                <value>
                    <fullName>Sports Coupe</fullName>
                </value>
                <value>
                    <fullName>Sports Tourer</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>SWB</fullName>
                </value>
                <value>
                    <fullName>3 door</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>StarElite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>By_Lead_Interested_Vehicle_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Lead Interested Vehicle Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAC_Campaign_Task_De_dup_by__c</fullName>
        <description>Created for Generate Campaign Task by CAC Campaign field.</description>
        <formula>TEXT(Parent.Task_De_dup_by__c )</formula>
        <label>CAC Campaign Task De-dup by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Campaign_Type__c</fullName>
        <description>Used for CAC CRM Campaign reporting purpose. Also used for CAC Campaign. Different LOVs for each controlled by record type.</description>
        <label>CAC Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Loyalty Program</fullName>
                </value>
                <value>
                    <fullName>Competitions and Sales</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Product Issue</fullName>
                </value>
                <value>
                    <fullName>New Car Launch</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Frequency_Category__c</fullName>
        <description>Used on CAC Campaign Planning layout. Also used to differentiate the CAC Campaign Calendar view.</description>
        <label>CAC Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Repeated_Campaign__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Regular-Continuous</fullName>
                </value>
                <value>
                    <fullName>Regular-Periodic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBU_PbP__c</fullName>
        <label>CBU/PbP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBU</fullName>
                </value>
                <value>
                    <fullName>PbP</fullName>
                </value>
                <value>
                    <fullName>CBU&amp;PbP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_CCC_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to user to identify the CCC Manger to whom all tasks will be assigned in case of OB execution</description>
        <label>Campaign CCC Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Channels__c</fullName>
        <label>Campaign Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Mobile Showroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Executer__c</fullName>
        <description>Defines the owner of the campaign record</description>
        <label>Campaign Executer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WholeSale</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Execution_Channels__c</fullName>
        <description>This field is used to define whether the campaign will be executed via which channel, whether it will be an outbound email, SMS, outbound call etc</description>
        <label>Campaign Execution Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>OB</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>DM Magazine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Format__c</fullName>
        <label>Campaign Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Autoshow</fullName>
                </value>
                <value>
                    <fullName>Showroom Visit</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Dealer Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Member_Sharing_Rule__c</fullName>
        <description>Rule which is more an information utilized in Segementation</description>
        <label>Campaign Member Sharing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Account One Dealer</fullName>
                </value>
                <value>
                    <fullName>One Account Multiple Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Objectives__c</fullName>
        <label>Campaign Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Offer_Type__c</fullName>
        <label>Campaign Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
                <value>
                    <fullName>Event Participation</fullName>
                </value>
                <value>
                    <fullName>Incentive</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Partner</label>
        <referenceTo>Campaign_Partner__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Response_Channels__c</fullName>
        <label>Campaign Response Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Online Registration</fullName>
                </value>
                <value>
                    <fullName>Visit Dealer</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <description>This field can be used to track the progress of the execution campaign life cycle</description>
        <label>Campaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Segmentation</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Response collection</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <label>Campaign Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crosspoint</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Sales and After Sales</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Finance - &gt;  Prematurity</fullName>
                </value>
                <value>
                    <fullName>Sales -&gt; Crosspoint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>The Type of Campaign</description>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts Cross Promotion</fullName>
                </value>
                <value>
                    <fullName>Idle Hour Promotion</fullName>
                </value>
                <value>
                    <fullName>Service Product Promotion</fullName>
                </value>
                <value>
                    <fullName>Insurance Promotion</fullName>
                </value>
                <value>
                    <fullName>Maintenance Promotion</fullName>
                </value>
                <value>
                    <fullName>Familiarization workshop for new vehicle owners</fullName>
                </value>
                <value>
                    <fullName>Familiarization workshop for dormant customers</fullName>
                </value>
                <value>
                    <fullName>VEP(Seasonal Check)</fullName>
                </value>
                <value>
                    <fullName>Used-car buy-back/Trade-in</fullName>
                </value>
                <value>
                    <fullName>New Customer Acquisition</fullName>
                </value>
                <value>
                    <fullName>Promotion on Technical accessories and collections</fullName>
                </value>
                <value>
                    <fullName>POM/Advertisement</fullName>
                </value>
                <value>
                    <fullName>Marketing Survey</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <description>The specific MB series the campaign is targeting.</description>
        <label>Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-CLASS</fullName>
                </value>
                <value>
                    <fullName>B-CLASS</fullName>
                </value>
                <value>
                    <fullName>C-CLASS</fullName>
                </value>
                <value>
                    <fullName>C-Class Estate</fullName>
                </value>
                <value>
                    <fullName>C-Coupe</fullName>
                </value>
                <value>
                    <fullName>CL-CLASS</fullName>
                </value>
                <value>
                    <fullName>CLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>CLS-CLASS</fullName>
                </value>
                <value>
                    <fullName>E-CLASS</fullName>
                </value>
                <value>
                    <fullName>E Coupe Sport</fullName>
                </value>
                <value>
                    <fullName>E-Class Cabriolet</fullName>
                </value>
                <value>
                    <fullName>G-CLASS</fullName>
                </value>
                <value>
                    <fullName>GL-CLASS</fullName>
                </value>
                <value>
                    <fullName>GLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>ML-CLASS</fullName>
                </value>
                <value>
                    <fullName>R-CLASS</fullName>
                </value>
                <value>
                    <fullName>S-CLASS</fullName>
                </value>
                <value>
                    <fullName>SL-CLASS</fullName>
                </value>
                <value>
                    <fullName>SLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>Concept Car</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>G65 AMG</fullName>
                </value>
                <value>
                    <fullName>G63 AMG</fullName>
                </value>
                <value>
                    <fullName>E63 AMG</fullName>
                </value>
                <value>
                    <fullName>SLK55 AMG</fullName>
                </value>
                <value>
                    <fullName>C63 AMG</fullName>
                </value>
                <value>
                    <fullName>CLS63 AMG</fullName>
                </value>
                <value>
                    <fullName>G55 AMG</fullName>
                </value>
                <value>
                    <fullName>ML63 AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Campaign_Status__c</fullName>
        <description>This field can be used to track the progress of the execution campaign life cycle</description>
        <label>Campaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Segmentation</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Response collection</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class1__c</fullName>
        <label>Class1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class HATCHBACK</fullName>
                </value>
                <value>
                    <fullName>B-Class MPV</fullName>
                </value>
                <value>
                    <fullName>C-Class COUPE</fullName>
                </value>
                <value>
                    <fullName>C-Class HATCHBACK</fullName>
                </value>
                <value>
                    <fullName>C-Class SEDAN</fullName>
                </value>
                <value>
                    <fullName>CL COUPE</fullName>
                </value>
                <value>
                    <fullName>CLA 4 DOOR COUPE</fullName>
                </value>
                <value>
                    <fullName>CLA ESTATE</fullName>
                </value>
                <value>
                    <fullName>CLK CABRIO</fullName>
                </value>
                <value>
                    <fullName>CLK COUPE</fullName>
                </value>
                <value>
                    <fullName>CLS 4 DOOR COUPE</fullName>
                </value>
                <value>
                    <fullName>CLS ESTATE</fullName>
                </value>
                <value>
                    <fullName>E-Class CABRIO</fullName>
                </value>
                <value>
                    <fullName>E-Class ESTATE</fullName>
                </value>
                <value>
                    <fullName>E-Class SEDAN</fullName>
                </value>
                <value>
                    <fullName>G-Class SUV</fullName>
                </value>
                <value>
                    <fullName>GL SUV</fullName>
                </value>
                <value>
                    <fullName>GLA SUV</fullName>
                </value>
                <value>
                    <fullName>GLC SUV</fullName>
                </value>
                <value>
                    <fullName>GLE SUV</fullName>
                </value>
                <value>
                    <fullName>GLK SUV</fullName>
                </value>
                <value>
                    <fullName>Maybach SEDAN</fullName>
                </value>
                <value>
                    <fullName>M-Class SUV</fullName>
                </value>
                <value>
                    <fullName>Mercedes-AMG GT SPORTCOUPE</fullName>
                </value>
                <value>
                    <fullName>R-Class MPV</fullName>
                </value>
                <value>
                    <fullName>S-Class CABRIO</fullName>
                </value>
                <value>
                    <fullName>S-Class COUPE</fullName>
                </value>
                <value>
                    <fullName>S-Class SEDAN</fullName>
                </value>
                <value>
                    <fullName>SL ROADSTER</fullName>
                </value>
                <value>
                    <fullName>SLC ROADSTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>CL-Class</fullName>
                </value>
                <value>
                    <fullName>CLK-Class</fullName>
                </value>
                <value>
                    <fullName>CLS-Class</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>GL-Class</fullName>
                </value>
                <value>
                    <fullName>GLK-Class</fullName>
                </value>
                <value>
                    <fullName>ML-Class</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL-Class</fullName>
                </value>
                <value>
                    <fullName>SLK-Class</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CLA-Class</fullName>
                </value>
                <value>
                    <fullName>GLA-Class</fullName>
                </value>
                <value>
                    <fullName>GLA 45 AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloneCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CloneCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Campaign)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Date for the campaign close to dealer.</description>
        <inlineHelpText>Date for the campaign close to dealer.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consolidated_List_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidated List Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Preview__c</fullName>
        <description>Used only for Campaign Execution. To display the Message Detail of Template selected. Updated by workflow (because it&apos;s a long text not able to use formula).</description>
        <label>SMS Preview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_converted_leads__c</fullName>
        <label>Count of converted leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Batch Task Generation, will not put on page layout.</description>
        <label>Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Unique_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Unique Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Comments__c</fullName>
        <label>DM Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Material</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup(DM Material)</description>
        <label>DM Template</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>Campaigns (DM Template)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Budget__c</fullName>
        <description>Retail Campaign: Dealer Budget of the campaign.</description>
        <inlineHelpText>System sum up from Retail Campaign.</inlineHelpText>
        <label>Dealer Budget</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Aftersales,</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Business Network Development</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distribution_is_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution is completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driven_Type__c</fullName>
        <description>This field can be used to set to determine who will drive the campaign</description>
        <label>Driven Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WholeSale</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>